--- a/iniciais/sumario.tex
+++ b/iniciais/sumario.tex
@@ -16,30 +16,38 @@
 \addcontentsline{toc}{chapter}{Lista de Abreviaturas e Siglas}
 \chapter*{Lista de Abreviaturas e Siglas}
 \begin{tabular}{ll}
-	BD & Banco de Dados\\
 	TPC & \textit{Transaction Processing Performance Council}\\
 	TPC-H & TPC \textit{Benchmark} H\\
-	DSS & Decision Support Systems\\
+	DSS & \textit{Decision Support Systems}\\
 	DW & \textit{Data Warehouse}\\
 	OLAP & \textit{On-Line Analytical Processing}\\
 	OLTP & \textit{On-Line Transaction Processing}\\
 	SGBD & Sistemas Gerenciadores de Banco de Dados\\
 	SGBDR & Sistemas Gerenciadores de Banco de Dados Relacional\\
-	SF & Factor Scale\\
+	SGBDC & Sistemas Gerenciadores de Banco de Dados Colunar \\
+	SF & \textit{Scale Factor}\\
 	PK & \textit{Primary Key}\\
 	FK & \textit{Foreign Key}\\
 	RF & \textit{Refresh Function} \\
+	GB & Gigabyte \\
+	TB & Terabyte \\
+	CAP & \textit{Consistency, Availability, Partition tolerance} \\
+	BASE & \textit{Basically Available, Soft state, Eventual consistency} \\
+	ACID & \textit{Atomicity, Consistency, Isolation, Durability} \\
+	EM & \textit{Early Materialization} \\
+	LM & \textit{Late Materialization} \\
 \end{tabular}
 
 \pagebreak
 \addcontentsline{toc}{chapter}{Lista de Símbolos}
 \chapter*{Lista de Símbolos}
 \begin{tabular}{ll}
-	$Q_{i}$ & Consulta, onde \mbox{$1 \le i \le 15$}\\
-	\textit{S} & Número de sessões de consulta do Teste de Vazão\\
-	\textit{s} & Sessão, onde \mbox{$1 \le s \le S$}\\
-	$RF_{j}$ & \textit{Refresh Function} -- Função de Atualização\\
-	$T_{s}$ & Tempo em segundos da execução de todo o processo do Teste de Vazão\\
+	\textit{SF} & Fator de escala do banco de dados \\
+	$Q_{i}$ & Consulta SQL, onde \mbox{$1 \le i \le 22$}\\
+	\textit{S} & Número de sessões de consulta do teste de vazão\\
+	\textit{s} & Uma única sessão, onde \mbox{$1 \le s \le S$}\\
+	$RF_{j}$ & Função de Atualização, onde \mbox{$1 \le i \le 2$}\\
+	$T_{s}$ & Tempo em segundos da execução de todo o processo do teste de vazão\\
 \end{tabular}
 
 \pagebreak
